--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,25 @@
 /sfrbx_gps_eph.csv
 /.idea/workspace.xml
 /.idea/deployment.xml
+/alm_data.csv
+/data_glonass53.csv
+/eph_data.csv
+/eph_solves.csv
+/glo_df_5sats.csv
+/glo_df_5sats_2.csv
+/ira_data.csv
+/ira_data1.txt
+/ira_data2.txt
+/nav_params.csv
+/old_code/satellites_data1.txt
+/old_code/satellites_data2.txt
+/old_code/satellites_data3.txt
+/old_code/satellites_data6.txt
+/old_code/satellites_data7.txt
+/old_code/satellites_data_4_.txt
+/old_code/satellites_data_5_.txt
+/old_code/satellites_data_BIG.txt
+/sats_glonass.csv
+/sats_glonass27.csv
+/sats_glonass5.csv
+/ira_data*
