--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pyserial~=3.5
 
-numpy~=1.26.1
+numpy
 pandas~=2.2.0
 
 pynmeagps~=1.0.33
 
-tabulate~=0.9.0
 pyubx2~=1.2.36
 pymap3d~=3.1.0
 matplotlib~=3.8.0
 pytz~=2024.1
+scipy~=1.14.0
